build: Make rootfs the default image
Signed-off-by: Fabian Deutsch <fabiand@fedoraproject.org>

--- a/Makefile.am
+++ b/Makefile.am
@@ -5,7 +5,7 @@ TEST_LOG_DRIVER = env AM_TAP_AWK='$(AWK)' $(SHELL) \
                   $(top_srcdir)/build-aux/tap-driver.sh
 TESTS = tests/package/check_python.test tests/package/check_packaging.test
 
-IMAGE = runtime-layout
+IMAGE = rootfs
 TESTIMAGE = $(IMAGE).qcow2
 
 hooksdir = $(pkgdatadir)/hooks.d/
