build: Don't fail if no proxy is given
Signed-off-by: Fabian Deutsch <fabiand@fedoraproject.org>

--- a/data/images/Makefile
+++ b/data/images/Makefile
@@ -14,6 +14,6 @@ kickstarts/%.ks: kickstarts/template/%.ks $(PARTIAL_KS)
 	echo partials: $(PARTIAL_KS)
 	mkdir -p $$(dirname "$@")
 	kickstarts/flatten.py "$<" > "$@"
-	[[ -n "$$PROXY" ]] && sed -i "s/^\(url\|repo\) /\1 --proxy=$$PROXY /" "$@"
+	[[ -n "$$PROXY" ]] && sed -i "s/^\(url\|repo\) /\1 --proxy=$$PROXY /" "$@" || :
 
 include poor-mans-lmc.makefile
