build: Add a missing dep between qcow and ks
Signed-off-by: Fabian Deutsch <fabiand@fedoraproject.org>

--- a/Makefile.am
+++ b/Makefile.am
@@ -63,7 +63,7 @@ data/images/%.qcow2: $(PARTIAL_KS)
 #
 # Now some targets to test the installation part
 #
-rootfs.qcow2:
+rootfs.qcow2: data/images/rootfs.qcow2
 	make image-build IMAGE=rootfs
 
 rootfs.raw: rootfs.qcow2
