build: Make rootfs.qcow2 an intermediate file
To prevent it from getting rebuild when it exists

Signed-off-by: Fabian Deutsch <fabiand@fedoraproject.org>

--- a/Makefile.am
+++ b/Makefile.am
@@ -10,6 +10,8 @@ SQUASHFS=$(NAME).squashfs.img
 QCOW = $(NAME).qcow2
 QCOW_CHECK = installation.qcow2
 
+.INTERMEDIATE : rootfs.qcow2
+
 hooksdir = $(pkgdatadir)/hooks.d/
 pyimagebaseddir = $(pythondir)/$(PACKAGE_NAME)
 pyimagebasedpluginsdir = $(pyimagebaseddir)/plugins
