build: Prevent deletion of rootfs.qcow2
… if it was created on demand.

Signed-off-by: Fabian Deutsch <fabiand@fedoraproject.org>

--- a/Makefile.am
+++ b/Makefile.am
@@ -11,6 +11,7 @@ QCOW = $(NAME).qcow2
 QCOW_CHECK = installation.qcow2
 
 .INTERMEDIATE : rootfs.qcow2
+.SECONDARY : rootfs.qcow2
 
 hooksdir = $(pkgdatadir)/hooks.d/
 pyimagebaseddir = $(pythondir)/$(PACKAGE_NAME)
