build: Switch to force reuse existing rootfs
Signed-off-by: Fabian Deutsch <fabiand@fedoraproject.org>

--- a/Makefile.am
+++ b/Makefile.am
@@ -67,7 +67,11 @@ data/images/%.qcow2: $(PARTIAL_KS)
 # Now some targets to test the installation part
 #
 rootfs.qcow2: data/images/rootfs.qcow2
+ifdef FORCE_REUSE_EXISTING_ROOTFS
+	@echo "Reusing existing rootfs -- no action taken"
+else
 	make image-build IMAGE=rootfs
+endif
 
 rootfs.raw: rootfs.qcow2
 	qemu-img convert -p -S 1M -O raw $< $@
