build: Support centos builds
Signed-off-by: Fabian Deutsch <fabiand@fedoraproject.org>

--- a/data/images/Makefile
+++ b/data/images/Makefile
@@ -15,7 +15,7 @@ kickstarts/%.ks: kickstarts/template/%.ks $(PARTIAL_KS)
 	echo partials: $(PARTIAL_KS)
 	echo distro: $(DISTRO)
 	mkdir -p $$(dirname "$@")
-	ln -vfs kickstarts/baseos/$(DISTRO).ks kickstarts/partial/os.ks
+	ln -vfs ../baseos/$(DISTRO).ks kickstarts/partial/os.ks
 	kickstarts/flatten.py "$<" > "$@"
 	[[ -n "$$http_proxy" ]] && sed -i "s/^\(url\|repo\) /\1 --proxy=$$http_proxy /" "$@" || :
 
