--- a/data/images/Makefile
+++ b/data/images/Makefile
@@ -2,21 +2,16 @@
 DISTRO=fedora
 PARTIAL_KS=$(wildcard kickstarts/partial/*.ks kickstarts/baseos/*.ks)
 
-all: run-install
-	echo Done
+dummy:
+	@echo Nothing to do
 
 sparsify:
 	virt-sparsify --compress --convert qcow2 "$<" "$@"
 
-grow:
-	qemu-img resize "$@" $(VM_GROWSIZE)
-
 kickstarts/%.ks: kickstarts/template/%.ks $(PARTIAL_KS)
-	echo partials: $(PARTIAL_KS)
-	echo distro: $(DISTRO)
-	mkdir -p $$(dirname "$@")
-	ln -vfs ../baseos/$(DISTRO).ks kickstarts/partial/os.ks
-	kickstarts/flatten.py "$<" > "$@"
+	@mkdir -p $$(dirname "$@")
+	cat "kickstarts/baseos/$(DISTRO).ks" >> "$@"
+	kickstarts/flatten.py "$<" >> "$@"
 	[[ -n "$$http_proxy" ]] && sed -i "s/^\(url\|repo\) /\1 --proxy=$$http_proxy /" "$@" || :
 
 CLEANFILES+=$(wildcard kickstarts/*.ks)
