--- a/Makefile.am
+++ b/Makefile.am
@@ -35,14 +35,14 @@ EXTRA_DIST = \
   tests/package/common.sh \
   tests/runtime/*.py
 
-PARTIAL_KS = $(wildcard data/images/kickstarts/*/*.ks)
-DERIVED_KS = $(wildcard data/images/kickstarts/*.ks)
+PARTIAL_KS = $(wildcard data/kickstarts/*/*.ks)
+DERIVED_KS = $(wildcard data/kickstarts/*.ks)
 
 CLEANFILES = $(DERIVED_KS)
 .PHONY: $(DERIVED_KS)
 
 dist_doc_DATA = \
-  data/images/kickstarts/flatten.py \
+  data/kickstarts/flatten.py \
   $(PARTIAL_KS) \
   docs/imgbase.asc \
   docs/imgbase.8.asc
