build: Use NVR like version
Signed-off-by: Fabian Deutsch <fabiand@fedoraproject.org>

--- a/src/imgbased/config.py.in
+++ b/src/imgbased/config.py.in
@@ -28,4 +28,4 @@ imgbasehooksdir = '@PKGDATADIR@'
 
 
 def version():
-    return "%s %s %s" % (PACKAGE_NAME, PACKAGE_VERSION, REVISION)
+    return "%s-%s-%s" % (PACKAGE_NAME, PACKAGE_VERSION, REVISION)
