automation: Add coverage
Change-Id: I878bb307d74109a2ac28fc6e93ff256708206b50
Signed-off-by: Fabian Deutsch <fabiand@fedoraproject.org>

--- a/Makefile.am
+++ b/Makefile.am
@@ -84,7 +84,9 @@ check-pylint: $(SRCFILES)
 check-nosetests: $(SRCFILES)
 	@echo "[CHECK] nosetests"
 	nosetests --no-byte-compile --with-xunit \
-		--with-coverage --cover-erase --cover-tests --cover-branches --cover-inclusive --cover-package=imgbased --cover-xml \
+		--with-coverage --cover-erase --cover-tests \
+		--cover-branches --cover-inclusive \
+		--cover-package=imgbased --cover-xml --cover-min-percentage=51 \
 		--with-doctest --doctest-tests
 
 
