build: Be el7 compatible for now
Change-Id: I3c776a9642e04ec9aa3cfab12b51c381bfc418fc
Signed-off-by: Fabian Deutsch <fabiand@fedoraproject.org>

--- a/Makefile.am
+++ b/Makefile.am
@@ -71,11 +71,11 @@ export PYTHONPATH=src/
 
 check-pyflakes: $(SRCFILES)
 	@echo "[CHECK] pyflakes"
-	find . -xdev -name \*.py | xargs python3-pyflakes
+	find . -xdev -name \*.py | xargs pyflakes
 
 check-pep8: $(SRCFILES)
 	@echo "[CHECK] pep8"
-	find . -xdev -name \*.py | xargs python3-pep8
+	find . -xdev -name \*.py | xargs pep8
 
 check-pylint: $(SRCFILES)
 	@echo "[CHECK] pylint"
