service: Fix [Install] section
Change-Id: I6116eac66016d6f0c09bfb3e35af92ab86a39a2f
Signed-off-by: Fabian Deutsch <fabiand@fedoraproject.org>

--- a/data/imgbase-motd.service
+++ b/data/imgbase-motd.service
@@ -5,3 +5,6 @@ Description=Build motd based on imgbase analysis
 ExecStart=/usr/sbin/imgbase motd --update
 Type=oneshot
 RemainAfterExit=yes
+
+[Install]
+WantedBy=multi-user.target
