--- a/src/imgbased/config.py.in
+++ b/src/imgbased/config.py.in
@@ -24,8 +24,9 @@
 PACKAGE_NAME = '@PACKAGE_NAME@'
 PACKAGE_VERSION = '@PACKAGE_VERSION@'
 REVISION = '@REVISION@'
+RELEASE = '@RELEASE@'
 imgbasehooksdir = '@PKGDATADIR@'
 
 
 def version():
-    return "%s-%s-%s" % (PACKAGE_NAME, PACKAGE_VERSION, REVISION)
+    return "%s-%s-%s%s" % (PACKAGE_NAME, PACKAGE_VERSION, RELEASE, REVISION)
