--- a/configure.ac
+++ b/configure.ac
@@ -19,7 +19,8 @@ AC_SUBST([FEDORA],[[`rpm --eval '%{fedora}'|sed 's/[^0-9]//g'`]])
 AC_SUBST([RHEL], [[`rpm --eval '%{rhel}'|sed 's/[^0-9]//g'`]])
 AC_SUBST([CENTOS], [[`rpm --eval '%{centos}'|sed 's/[^0-9]//g'`]])
 AC_SUBST([PLATFORM])
-AC_SUBST([REVISION], "git"[m4_esyscmd_s([git describe --always])])
+AC_SUBST([REVISION], "git"[m4_esyscmd_s([git log -n1 --format=%h])])
+AC_SUBST([RELEASE], [0.[`date '+%Y%m%d%H%M'`]])
 
 if test "$FEDORA"; then
     PLATFORM=Fedora$FEDORA
