--- a/packaging/rpm/imgbased.spec.in
+++ b/packaging/rpm/imgbased.spec.in
@@ -8,7 +8,7 @@ Summary:        Tools to work with an image based rootfs
 
 License:        GPLv2+
 URL:            https://www.github.com/fabiand/imgbased
-Source0:        %{name}-%{version}.tar.xz
+Source0:        http://resources.ovirt.org/pub/src/%{name}/%{name}-%{version}.tar.xz
 
 BuildArch:      noarch
 
@@ -77,7 +77,8 @@ install -Dm 0644 data/imgbase-motd.service %{buildroot}%{_unitdir}/imgbase-motd.
 
 
 %files
-%doc README.md LICENSE
+%doc README.md
+%license LICENSE
 %{_sbindir}/imgbase
 %{_datadir}/%{name}/hooks.d/
 %{python_sitelib}/%{name}/
