Remove non-imgbased boot entries at boot
Extend the Grubby class (and BootConfiguration) with convenience
methods for grabbing node and non-node entries with readable names
(and without calling private methods to get non-node), so imgbased
check can easily check whether there are *any* valid entries

Add an additional oneshot systemd service to do this at boot time.
Make sure it starts before imgbase-motd, so the motd accurately
reflects the state of the system.

Make "imgbase check" also check the bootloader. We're ok if there
are valid imgbased entries, but if there aren't, check if there's
anything bootable at all. Flag both as failures (separately).

Change-Id: I60031cd8f6c47ebed4bac144bb1480e0838ca46d
Bug-Url: https://bugzilla.redhat.com/show_bug.cgi?id=1346872
Signed-off-by: Ryan Barry <rbarry@redhat.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -32,6 +32,7 @@ EXTRA_DIST = \
   src/plugin-dnf/imgbased-warning.py \
   src/plugin-yum/imgbased-warning.py \
   src/plugin-yum/imgbased-warning.conf \
+  data/imgbase-clean-grub.service \
   data/imgbase-motd.service \
   tests/*.py
   $(NULL)
