--- a/packaging/rpm/imgbased.spec.in
+++ b/packaging/rpm/imgbased.spec.in
@@ -73,6 +73,7 @@ install -Dm 0644 src/plugin-yum/imgbased-warning.py \
 install -Dm 0644 src/plugin-yum/imgbased-warning.conf \
                  %{buildroot}/%{_sysconfdir}/yum/pluginconf.d/imgbased-warning.conf
 %endif
+install -Dm 0644 data/imgbase-clean-grub.service %{buildroot}%{_unitdir}/imgbase-clean-grub.service
 install -Dm 0644 data/imgbase-motd.service %{buildroot}%{_unitdir}/imgbase-motd.service
 %make_install
 
@@ -85,6 +86,7 @@ install -Dm 0644 data/imgbase-motd.service %{buildroot}%{_unitdir}/imgbase-motd.
 %{python_sitelib}/%{name}/
 %{_mandir}/man8/imgbase.8*
 /%{_docdir}/%{name}/*.asc
+%{_unitdir}/imgbase-clean-grub.service
 %{_unitdir}/imgbase-motd.service
 %if 0%{?fedora}
 %{python3_sitelib}/dnf-plugins/imgbased-warning.py*
