yum plugin for RPM persistence
Hook pretrans to save packages to /var/imgbased/persisted-rpms.

Hook posttrans to remove the RPMs from that path (if they're
present).

Keep a list of packages to exclude in the plugin configuration
file, so image updates are not kept (mostly)

https://bugzilla.redhat.com/show_bug.cgi?id=1361230

Change-Id: I95f26915e928f094dbc66407161c2cd9537c9ead
Signed-off-by: Ryan Barry <rbarry@redhat.com>
(cherry picked from commit 60087388de86a3eef43b5543fbf9782b9c3131d0)

--- a/Makefile.am
+++ b/Makefile.am
@@ -32,6 +32,8 @@ EXTRA_DIST = \
   src/plugin-dnf/imgbased-warning.py \
   src/plugin-yum/imgbased-warning.py \
   src/plugin-yum/imgbased-warning.conf \
+  src/plugin-yum/imgbased-persist.py \
+  src/plugin-yum/imgbased-persist.conf \
   data/imgbase-clean-grub.service \
   data/imgbase-motd.service \
   data/imgbase-generate-iqn.service \
