--- a/packaging/rpm/imgbased.spec.in
+++ b/packaging/rpm/imgbased.spec.in
@@ -72,6 +72,10 @@ install -Dm 0644 src/plugin-yum/imgbased-warning.py \
                  %{buildroot}/%{_prefix}/lib/yum-plugins/imgbased-warning.py
 install -Dm 0644 src/plugin-yum/imgbased-warning.conf \
                  %{buildroot}/%{_sysconfdir}/yum/pluginconf.d/imgbased-warning.conf
+install -Dm 0644 src/plugin-yum/imgbased-persist.py \
+                 %{buildroot}/%{_prefix}/lib/yum-plugins/imgbased-persist.py
+install -Dm 0644 src/plugin-yum/imgbased-persist.conf \
+                 %{buildroot}/%{_sysconfdir}/yum/pluginconf.d/imgbased-persist.conf
 %endif
 install -Dm 0644 data/imgbase-clean-grub.service %{buildroot}%{_unitdir}/imgbase-clean-grub.service
 install -Dm 0644 data/imgbase-motd.service %{buildroot}%{_unitdir}/imgbase-motd.service
@@ -94,6 +98,8 @@ install -Dm 0644 data/imgbase-generate-iqn.service %{buildroot}%{_unitdir}/imgba
 %else
 %{_sysconfdir}/yum/pluginconf.d/imgbased-warning.conf
 %{_prefix}/lib/yum-plugins/imgbased-warning.py*
+%{_sysconfdir}/yum/pluginconf.d/imgbased-persist.conf
+%{_prefix}/lib/yum-plugins/imgbased-persist.py*
 %endif
 
 %changelog
