dnf plugin for RPM persistence
Hook transaction to save packages to /var/imgbased/persisted-rpms.

Also remove the RPMs from that path (if they're present).

Keep a list of packages to exclude in the plugin configuration
file, so image updates are not kept (mostly)

https://bugzilla.redhat.com/show_bug.cgi?id=1361230

Change-Id: I07ec0a3a446693bd8f2eee7039b585ea08a569a9
Signed-off-by: Ryan Barry <rbarry@redhat.com>
(cherry picked from commit f82a9cb2c5639ea0e75a2b576bdd0d2f85b622b7)

--- a/packaging/rpm/imgbased.spec.in
+++ b/packaging/rpm/imgbased.spec.in
@@ -65,6 +65,10 @@ make %{?_smp_mflags}
 
 %install
 %if 0%{?fedora}
+install -Dm 0644 src/plugin-dnf/imgbased-persist.conf \
+                 %{buildroot}/%{_sysconfdir}/dnf/pluginconf.d/imgbased-persist.conf
+install -Dm 0644 src/plugin-dnf/imgbased-persist.py \
+                 %{buildroot}/%{python3_sitelib}/dnf-plugins/imgbased-persist.py
 install -Dm 0644 src/plugin-dnf/imgbased-warning.py \
                  %{buildroot}/%{python3_sitelib}/dnf-plugins/imgbased-warning.py
 %else
@@ -93,6 +97,8 @@ install -Dm 0644 data/imgbase-generate-iqn.service %{buildroot}%{_unitdir}/imgba
 /%{_docdir}/%{name}/*.asc
 %{_unitdir}/imgbase-*.service
 %if 0%{?fedora}
+%{_sysconfdir}/dnf/pluginconf.d/imgbased-persist.conf
+%{python3_sitelib}/dnf-plugins/imgbased-persist.py*
 %{python3_sitelib}/dnf-plugins/imgbased-warning.py*
 %{python3_sitelib}/dnf-plugins/__pycache__/imgbased*
 %else
