Update changelog, too...
Change-Id: Id3a4312f87c9d67d703b148ca454a804f52a6e80
Signed-off-by: Ryan Barry <rbarry@redhat.com>

--- a/packaging/rpm/imgbased.spec.in
+++ b/packaging/rpm/imgbased.spec.in
@@ -97,6 +97,9 @@ install -Dm 0644 data/imgbase-motd.service %{buildroot}%{_unitdir}/imgbase-motd.
 %endif
 
 %changelog
+* Wed Oct 19 2016 Ryan Barry <rbarry@redhat.com> - 0.8.6-1
+- Ensure disabled services stay disabled after upgrade
+
 * Thu Sep 15 2016 Ryan Barry <rbarry@fedoraproject.org> - 0.8.5-1
 - Remove non-imgbased entries at boot
 
