osupdater: relocate /var/lib/yum
The patch to building yesterday ensured that new installs would be
correct, but an additional patch is needed to relocate
/var/lib/yum on existing installs which were upgraded.

Change-Id: I7973f1cbe0dece1a0233fa2db2dc8c6b2ac7a798
Bug-Url: https://bugzilla.redhat.com/show_bug.cgi?id=1393639
Signed-off-by: Ryan Barry <rbarry@redhat.com>
(cherry picked from commit a4443b98cab2da8b36e35ee1e0d2d59d312028a4)

--- a/packaging/rpm/imgbased.spec.in
+++ b/packaging/rpm/imgbased.spec.in
@@ -97,6 +97,9 @@ install -Dm 0644 data/imgbase-motd.service %{buildroot}%{_unitdir}/imgbase-motd.
 %endif
 
 %changelog
+* Fri Nov 11 2016 Ryan Barry <rbarry@redhat.com> - 0.8.9-1
+- Also relocate on updates
+
 * Thu Nov 10 2016 Ryan Barry <rbarry@redhat.com> - 0.8.8-1
 - Relocate /var/lib/yum to /usr
 
