--- a/packaging/rpm/imgbased.spec.in
+++ b/packaging/rpm/imgbased.spec.in
@@ -75,6 +75,7 @@ install -Dm 0644 src/plugin-yum/imgbased-warning.conf \
 %endif
 install -Dm 0644 data/imgbase-clean-grub.service %{buildroot}%{_unitdir}/imgbase-clean-grub.service
 install -Dm 0644 data/imgbase-motd.service %{buildroot}%{_unitdir}/imgbase-motd.service
+install -Dm 0644 data/imgbase-generate-iqn.service %{buildroot}%{_unitdir}/imgbase-generate-iqn.service
 %make_install
 
 
@@ -86,8 +87,7 @@ install -Dm 0644 data/imgbase-motd.service %{buildroot}%{_unitdir}/imgbase-motd.
 %{python_sitelib}/%{name}/
 %{_mandir}/man8/imgbase.8*
 /%{_docdir}/%{name}/*.asc
-%{_unitdir}/imgbase-clean-grub.service
-%{_unitdir}/imgbase-motd.service
+%{_unitdir}/imgbase-*.service
 %if 0%{?fedora}
 %{python3_sitelib}/dnf-plugins/imgbased-warning.py*
 %{python3_sitelib}/dnf-plugins/__pycache__/imgbased*
