--- a/packaging/rpm/imgbased.spec.in
+++ b/packaging/rpm/imgbased.spec.in
@@ -97,6 +97,9 @@ install -Dm 0644 data/imgbase-generate-iqn.service %{buildroot}%{_unitdir}/imgba
 %endif
 
 %changelog
+* Mon Nov 14 2016 Ryan Barry <rbarry@redhat.com> - 0.8.10-1
+- Enable IQN randomization
+
 * Fri Nov 11 2016 Ryan Barry <rbarry@redhat.com> - 0.8.9-1
 - Also relocate on updates
 
