service: copy kernel and initrd to /boot on startup
Some tooling (grub2-mkconfig, libguestfs) does not know how to
handle the kernel and initrd being in subdirectories of /boot.

Copy them to /boot on system startup, and copy them back on
system shutdown (in case of a dracut rebuild)

We can use a service and a trivial bash script to find the kernel,
then infer the initramfs location based on where the kernel is,
in order to copy them back and forth.

Change-Id: I3770e553babda12603cfc2a3cedfa3bf1b8078ea
Bug-Url: https://bugzilla.redhat.com/show_bug.cgi?id=1392904
Signed-off-by: Ryan Barry <rbarry@redhat.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -13,7 +13,8 @@ pyimagebasedpluginsdir = $(pyimagebaseddir)/plugins
 vpath $(srcdir)
 
 dist_sbin_SCRIPTS = \
-  scripts/imgbase
+  scripts/imgbase \
+  scripts/imgbase-copy-bootfiles
 
 dist_pyimagebased_PYTHON = \
   src/imgbased/*.py
@@ -34,7 +35,9 @@ EXTRA_DIST = \
   src/plugin-yum/imgbased-warning.conf \
   data/imgbase-clean-grub.service \
   data/imgbase-motd.service \
+  data/imgbase-copy-bootfiles.service \
   data/imgbase-generate-iqn.service \
+  docs/imgbase-copy-bootfiles.8 \
   tests/*.py
   $(NULL)
 
@@ -42,7 +45,9 @@ dist_doc_DATA = \
   docs/imgbase.asc \
   docs/imgbase.8.asc
 
-man8_MANS = docs/imgbase.8
+man8_MANS = \
+  docs/imgbase.8 \
+  docs/imgbase-copy-bootfiles.8
 
 doc: $(doc_DATA) $(dist_doc_DATA) $(man8-MANS)
 
