--- a/packaging/rpm/imgbased.spec.in
+++ b/packaging/rpm/imgbased.spec.in
@@ -99,6 +99,10 @@ install -Dm 0644 data/imgbase-generate-iqn.service %{buildroot}%{_unitdir}/imgba
 %endif
 
 %changelog
+* Tue Dec 22 2016 Ryan Barry <rbarry@redhat.com> - 0.9.0-1
+- Add a yum plugin to persist RPMs through upgrades
+- Remove existing yum/dnf plugins
+
 * Mon Nov 14 2016 Ryan Barry <rbarry@redhat.com> - 0.8.10-1
 - Enable IQN randomization
 
